--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>5.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.28</version>
+        </dependency>
     </dependencies>
 
     <build>
